[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykiwoom"
version = "0.1.0"
description = "Python wrapper for Kiwoom Securities (키움증권) OPEN API (REST) — Stock trading, balance, quotes, charts for Korean markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "STOA Company" },
]
keywords = [
    "kiwoom", "키움증권", "kiwoom-openapi",
    "trading", "stock", "finance", "quant",
    "korea", "korean-stock",
    "api", "api-wrapper", "rest-api",
    "algorithmic-trading", "auto-trading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]
mcp = [
    "mcp[cli]>=1.0.0",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
pykiwoom = "pykiwoom.cli:main"
pykiwoom-mcp = "pykiwoom.mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/Jaeminyx-Stoa/pykiwoom"
Repository = "https://github.com/Jaeminyx-Stoa/pykiwoom"
Documentation = "https://jaeminyx-stoa.github.io/pykiwoom/"
Issues = "https://github.com/Jaeminyx-Stoa/pykiwoom/issues"
Changelog = "https://github.com/Jaeminyx-Stoa/pykiwoom/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pykiwoom"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
